--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,8 +106,8 @@
     botaoSim.addEventListener('click', () => {
       alerta.style.display = 'block';
       setTimeout(() => {
-        alerta.style.display = 'none';
-      }, 3000); // esconde depois de 3 segundos
+        window.location.href = 'https://wa.me/556692207953';
+      }, 2000); // redireciona para o WhatsApp após 2 segundos
     });
   </script>
 </body>
